[package]
name = "baabaabaabaabababbababbaa"
version = "0.1.0"
edition = "2024"

[features]
default = []
web-codecs  = ["dep:web-codecs"]
android     = ["dep:mediacodec"]
linux       = ["dep:cros-codecs", "cros-codecs/vaapi"]
apple       = []

[dependencies]
thiserror = "2"
bytes     = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-codecs = { version = "0.3", optional = true }
wasm-bindgen-futures = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
mediacodec = { version = "0.1", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
cros-codecs = { version = "0.0.5", optional = true, default-features = false, path = "../cros-codecs" }

[target.'cfg(target_os = "macos")'.dependencies]
videotoolbox-rs = { version = "0.1", optional = true }

[target.'cfg(target_os = "ios")'.dependencies]
videotoolbox-rs = { version = "0.1", optional = true }

[patch.crates-io]
cros-libva = { path = "../cros-libva/lib" }

[profile.dev]
opt-level = 0