[package]
name = "baabaabaabaabababbababbaa"
version = "0.1.0"
edition = "2024"

[features]
default = []
linux = [
    "dep:cros-codecs",
    "cros-codecs/vaapi",
    "cros-codecs/h265",
    "cros-codecs/av1",
    "cros-codecs/gbm",
]
apple = ["dep:videotoolbox-rs"]

[dependencies]
thiserror = "2"
bytes = "1"
cros-codecs = { version = "0.0.10", optional = true, default-features = false, git = "https://github.com/mlm-games/cros-codecs", branch = "main" }

[target.'cfg(target_os = "android")'.dependencies]
log = "0.4"
mediacodec = { version = "0.1", git = "https://github.com/mlm-games/rust_mediacodec", branch = "main" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "time",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "VideoFrame",
    "VideoFrameBufferInit",
    "VideoPixelFormat",
] }
web-codecs = { git = "https://github.com/mlm-games/web-rs.git" }

[target.'cfg(target_os = "macos")'.dependencies]
videotoolbox-rs = { version = "0.1", optional = true }

[target.'cfg(target_os = "ios")'.dependencies]
videotoolbox-rs = { version = "0.1", optional = true }

[patch.crates-io]
# web-codecs = { path = "/home/ymsr/Documents/Repos/web-rs/web-codecs" }
